# lugha

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml
benches/: eval.rs
src/: eval.rs  lexer.rs  lib.rs  main.rs  parser.rs
www/: index.html  index.js  package-lock.json  package.json
